--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
 
 script:
   - mvn test -Pjacoco -Pweld
-# disabled until issue with repeatable qualifiers is worked out
+# disabled until OWB-1004 (repeatable qualifiers) is worked out
 # - mvn test -Pjacoco -Powb -pl envs/se
   - mvn test -Pjacoco -Pwildfly -pl envs/ee
 
