--- a/envs/se/pom.xml
+++ b/envs/se/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.astefanutti.camel.cdi</groupId>
         <artifactId>camel-cdi-envs</artifactId>
-        <version>1.0.0</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-cdi-se</artifactId>
