--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>io.astefanutti.camel.cdi</groupId>
         <artifactId>camel-cdi-parent</artifactId>
-        <version>1.0.0</version>
+        <version>1.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>camel-cdi</artifactId>
