--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ install:
 
 script:
   - mvn test -Pjacoco -Pweld
-# disabled until OWB-1004 (repeatable qualifiers) is worked out
-# - mvn test -Pjacoco -Powb -pl envs/se
+  - mvn test -Pjacoco -Powb -pl envs/se
   - mvn test -Pjacoco -Pwildfly -pl envs/ee
 
 jdk:
