--- a/envs/ee/pom.xml
+++ b/envs/ee/pom.xml
@@ -29,6 +29,15 @@
             <artifactId>javaee-api</artifactId>
         </dependency>
 
+        <!-- test dependencies -->
+
+        <dependency>
+            <groupId>org.jboss.shrinkwrap.resolver</groupId>
+            <artifactId>shrinkwrap-resolver-depchain</artifactId>
+            <type>pom</type>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <profiles>
