--- a/envs/se/pom.xml
+++ b/envs/se/pom.xml
@@ -61,6 +61,16 @@
                     <artifactId>geronimo-jcdi_1.1_spec</artifactId>
                 </dependency>
 
+                <dependency>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-atinject_1.0_spec</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.geronimo.specs</groupId>
+                    <artifactId>geronimo-interceptor_1.2_spec</artifactId>
+                </dependency>
+
                 <!-- test dependencies -->
 
                 <dependency>
