--- a/envs/pom.xml
+++ b/envs/pom.xml
@@ -15,6 +15,7 @@
     <modules>
         <module>ee</module>
         <module>se</module>
+        <module>karaf</module>
     </modules>
 
     <profiles>
