--- a/envs/karaf/examples/defaultcamelcontextandhellobean/pom.xml
+++ b/envs/karaf/examples/defaultcamelcontextandhellobean/pom.xml
@@ -22,6 +22,7 @@
         <camel.osgi.import.pkg>
             javax.annotation,
             javax.enterprise.context,
+            javax.enterprise.inject,
             javax.inject,
             org.apache.camel;version="[2.14,3)",
             org.apache.camel.builder;version="[2.14,3)",
