--- a/envs/karaf/examples/ContextNameAndHelloBean/pom.xml
+++ b/envs/karaf/examples/ContextNameAndHelloBean/pom.xml
@@ -31,7 +31,16 @@
         <camel.osgi.bundle.name>${project.name}</camel.osgi.bundle.name>
 
         <!-- Main Class to Boot -->
-        <example.main.class>org.jboss.weld.environment.se.StartMain</example.main.class>
+        <example.main.class>org.apache.camel.cdi.example1.Main</example.main.class>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>1.7.2</version>
+            <scope>runtime</scope>
+        </dependency>
+    </dependencies>
 
 </project>
