--- a/envs/karaf/examples/ContextNameAndHelloBean/pom.xml
+++ b/envs/karaf/examples/ContextNameAndHelloBean/pom.xml
@@ -37,8 +37,13 @@
     <dependencies>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.2</version>
+            <artifactId>slf4j-log4j12</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
