Fix Travis CI build

--- a/envs/karaf/examples/pom.xml
+++ b/envs/karaf/examples/pom.xml
@@ -77,7 +77,7 @@
     </build>
 
     <modules>
-        <module>contextnameandhellobean</module>
+        <module>ContextNameAndHelloBean</module>
         <module>defaultcamelcontextandhellobean</module>
     </modules>
 
