--- a/envs/karaf/examples/pom.xml
+++ b/envs/karaf/examples/pom.xml
@@ -14,6 +14,7 @@
     <packaging>pom</packaging>
 
     <dependencies>
+        <!-- Java EE & Weld -->
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
