--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <camel.version>2.14.0</camel.version>
         <cdi.version>1.2</cdi.version>
         <deltaspike.version>1.1.0</deltaspike.version>
+        <exec-maven-plugin-version>1.3.2</exec-maven-plugin-version>
         <javaee.version>7.0</javaee.version>
         <slf4j.version>1.7.7</slf4j.version>
         <weld.version>2.2.6.Final</weld.version>
@@ -88,6 +89,7 @@
     <modules>
         <module>impl</module>
         <module>envs</module>
+        <module>camel-maven-plugin</module>
     </modules>
 
     <build>
@@ -98,7 +100,7 @@
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>exec-maven-plugin</artifactId>
-                    <version>1.3.2</version>
+                    <version>${exec-maven-plugin-version}</version>
                 </plugin>
 
                 <plugin>
@@ -244,6 +246,12 @@
                 <artifactId>javaee-api</artifactId>
                 <version>${javaee.version}</version>
                 <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${exec-maven-plugin-version}</version>
             </dependency>
 
             <!-- test dependencies -->
