Refactor examples & move them to a QuickStarts module

--- a/camel-maven-plugin/pom.xml
+++ b/camel-maven-plugin/pom.xml
@@ -25,6 +25,13 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-core</artifactId>
         </dependency>
+
+        <!-- New Camel Maven Plugin -->
+        <dependency>
+            <groupId>io.astefanutti.camel.cdi</groupId>
+            <artifactId>camel-cdi</artifactId>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 </project>
