--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
         <module>impl</module>
         <module>envs</module>
         <module>camel-maven-plugin</module>
+        <module>quickstarts</module>
     </modules>
 
     <build>
