--- a/quickstarts/simplecontextname/pom.xml
+++ b/quickstarts/simplecontextname/pom.xml
@@ -3,14 +3,14 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>examples</artifactId>
+        <artifactId>quickstarts</artifactId>
         <groupId>io.astefanutti.camel.cdi</groupId>
         <version>1.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>contextname-hellobean</artifactId>
-    <name>Camel CDI :: Example :: @ContextName &amp; Hello Bean injected.</name>
+    <artifactId>simplecontextname</artifactId>
+    <name>Camel CDI :: Quickstarts :: @ContextName &amp; Hello Bean injected.</name>
     <packaging>bundle</packaging>
 
     <properties>
