--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -21,6 +21,8 @@
         <camel.osgi.import.pkg>
             !${camel.osgi.export.pkg},
             org.apache.camel.*,
+            org.apache.deltaspike.cdise.api;version="[1.1,2)";resolution:="optional",
+            org.apache.deltaspike.core.api.provider;version="[1.1,2)";resolution:="optional",
             *
         </camel.osgi.import.pkg>
         <camel.osgi.private.pkg>!*</camel.osgi.private.pkg>
