--- a/quickstarts/pom.xml
+++ b/quickstarts/pom.xml
@@ -90,8 +90,10 @@
                 <groupId>org.wildfly.plugins</groupId>
                 <artifactId>wildfly-maven-plugin</artifactId>
                 <version>1.0.2.Final</version>
+                <configuration>
+                    <artifact>org.wildfly:wildfly-dist:8.2.0.Final</artifact>
+                </configuration>
             </plugin>
-
         </plugins>
     </build>
 
